k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
      # Replace this with your own image before deploying
        image: microservice-meshapp-backend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
  - port: 5002
    targetPort: 5002
  selector:
    app: backend
