k8s/reviews.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews
  labels:
    app: reviews
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reviews
  template:
    metadata:
      labels:
        app: reviews
    spec:
      containers:
      - name: reviews
      # Replace this with your own image before deploying
        image: microservice-meshapp-reviews:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: reviews
spec:
  ports:
  - port: 5003
    targetPort: 5003
  selector:
    app: reviews
