k8s/frontend-useragent-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - frontend
  http:
  - match:
    - headers:
        user-agent:
          regex: ".*Chrome.*"
    route:
    - destination:
        host: frontend-v2
        port:
          number: 5001
  - match:
    - headers:
        user-agent:
          regex: ".*Edge.*"
    route:
    - destination:
        host: frontend-v1
        port:
          number: 5001
  - route: # default fallback
    - destination:
        host: frontend-v1
        port:
          number: 5001
